--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -27,20 +27,18 @@
     <div class="preheader">
         <div class="container">
            <div class="row">
-               <div class="col-sm-8">Follow the YorubaName project on
+               <div class="col-sm-4"></div>
+               <div class="col-sm-8 text-right">
                    <nav class="social-links">
                         <a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a>
                         <a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a>
                     </nav>
                </div>
-               <div class="col-sm-4 text-right"><a class="btn btn-lg btn-primary" href="https://indeigogo.com/">Donate</a></div>
+               
            </div>
         </div>
     </div>
 
-        
-        
-    </div>
 	<!-- Header -->
     <header>
     	<div class="container">
@@ -53,10 +51,12 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div class="nav-brand"><a href="/"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></div>
-                </div>                           
+                </div>
+                 
+                <!--a class="btn btn-sm btn-primary navbar-right" href="https://indeigogo.com/">Donate</a-->                          
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">   
-                        <li><a href="/">{{message "lang.home"}}</a></li>
+                        <!--li><a href="/">{{message "lang.home"}}</a></li-->
                         <li><a href="/about-us">{{message "lang.about"}}</a></li>
                         <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story">{{message "lang.donate"}}</a></li>
                         <li><a href="http://blog.yorubaname.com/?page_id=1972">{{message "lang.volunteer"}}</a></li>
@@ -65,6 +65,7 @@
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
                 </div>
+                
             </div>                    
    		</div>
    </header>
