--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -4,11 +4,12 @@
 <section id="searchform">
     <div class="jumbotron" id="home-banner">
        <div class="container">
-       		<h1>{{message "lang.jumbotron1"}} <span class="y-color">10,000</span> {{message "lang.jumbotron2"}}</h1>
+       		<h1>{{message "lang.jumbotron1"}} <span>10,000</span> {{message "lang.jumbotron2"}}</h1>
        		
             {{> searchcomponent }}
             
-            <h3>{{message "lang.jumboh31"}} <br /> <a href="/submitname">{{message "lang.jumboh32"}}</a></h3>
+            <h3>{{message "lang.jumboh31"}}</h3>
+            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a>
        </div>
     </div>
 </section>
@@ -18,27 +19,27 @@
     <div class="container">
 		
     	<div class="llm row">
-        	<div class="col-sm-4 llm-box">              	
+        	<div class="col-sm-4">              	
                 <ul>
-                    <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
+                    <li><h5>{{message "lang.latest-search"}}</h5></li>
                     <hr />
                     {{#each latestSearches}}
                         <li><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
-            <div class="col-sm-4 llm-box">
+            <div class="col-sm-4">
                 <ul>
-                    <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
+                    <li><h5>{{message "lang.latest-add"}}</h5></li>
                     <hr />
                     {{#each latestAdditions}}
                         <li><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
-            <div class="col-sm-4 llm-box">
+            <div class="col-sm-4">
             	<ul>
-                    <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
+                    <li><h5>{{message "lang.most-popular"}}</h5></li>
                     <hr />
                     {{#each mostPopular}}
                         <li><a href="/entries/{{this}}">{{this}}</a></li>
@@ -57,9 +58,9 @@
                 <div class="col-sm-4">
             		<h3>{{message "lang.name-of-day"}}</h3>
                     <hr />
-                    <h4><a href="">Baratimileyi</a></h4>
+                    <h4><a href="/entries/Baratimileyi">Baratimileyi</a></h4>
                     <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-                    <a href="">Read more</a>
+                    <a href="/entries/Baratimileyi">Read more</a>
             	</div>
 
                 <div class="col-sm-4">
@@ -74,7 +75,7 @@
                     <h3>{{message "lang.name-of-day"}}</h3>
                     <hr />
                     <h4>Baratimileyi</h4>
-                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish.</p>
                 </div>
                                       
             </div>
@@ -93,11 +94,12 @@
                 <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
                 <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
                 <div class="col-sm-4">
-                    <form class="" method="post">
+                    <form method="post" class="subscribe">
                         <h4>YorubaName Newsletter</h4>
+                        <p>Get the latest entries and meanings of the most famous and not-so-famous Yoruba names.</p>
                         <div class="form-group">
                             <input type="email" placeholder="Enter your email here" class="form-control">
-                            <button class="btn btn-default">Submit</button>
+                            <button class="btn btn-success"><i class="fa fa-send"></i></button>
                         </div>
                     </form>
                 </div>
