--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -1,8 +1,87 @@
 <!-- Header -->
 {{> header }}
 
+<section id="searchform">
+    <div class="jumbotron" id="home-banner">
+       <div class="container">
+       		<h1>{{message "lang.jumbotron1"}} <span>10,000</span> {{message "lang.jumbotron2"}}</h1>
+       		
+            {{> searchcomponent }}
+            
+            <!--h3>{{message "lang.jumboh31"}}</h3>
+            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a-->
+       </div>
+    </div>
+</section>
+
 <!-- main-content -->
 
+<section>
+   <div class="container">
+       
+       <div class="col-sm-3">
+       	  
+       </div>
+
+       <div class="col-sm-6">
+
+       	  <h3>About the Yoruba Names Project</h3>
+       	  
+       	  <p class="lead">Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+       	  
+       	  <p>Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper.</p>
+
+		<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Sed posuere consectetur est at lobortis. Donec sed odio dui. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+
+		<q>Curabitur blandit tempus porttitor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</q>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean lacinia bibendum nulla sed consectetur.</p>
+
+		<p>Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+
+		<p>Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper.</p>
+
+		<p>Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+
+		<hr>
+
+		<h4>The Project Team</h4>
+
+		<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+
+		<div class="teams row">
+			<div class="col-sm-4">
+			    <div class="thumbnail">
+				<img src="http://placehold.it/300x200" class="responsive-image">
+				</div>
+				<h4>Kola T.</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="col-sm-4">
+			    <div class="thumbnail">
+				<img src="http://placehold.it/300x200" class="responsive-image">
+				</div>
+				<h4>Dade A.</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="col-sm-4">
+			    <div class="thumbnail">
+				<img src="http://placehold.it/300x200" class="responsive-image">
+				</div>
+				<h4>Someother P.</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+		</div>
+
+		<hr>
+
+		<h4>Join our amazing team<h4>
+		<p class="lead">Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum.</p>
+		<a class="btn btn-lg btn-success">Volunteer</a>
+
+       </div>
+   </div>
+</section>
 
 <!-- /main-content -->
 
