--- a/website/src/main/resources/website/submitnameform.hbs
+++ b/website/src/main/resources/website/submitnameform.hbs
@@ -1,16 +1,19 @@
 
 <form id="suggest-form">
-	<h5>{{message "lang.submitname.entername"}}: (required)</h5>
-	<p class="small sec-color">{{message "lang.entry-not-found.minikeyb-text"}}        
-	{{> minisearchcomponent }}<br>
+
+	<div class="form-group">
+        <label class="required">{{message "lang.submitname.entername"}}</label>
+	    <p class="small sec-color">{{message "lang.entry-not-found.minikeyb-text"}}        
+	    {{> minisearchcomponent }}
+    </div><br>
 
     <div class="form-group">
-        <h5>{{message "lang.submitname.entermeaning"}}: (optional)</h5>
+        <label class="optional">{{message "lang.submitname.entermeaning"}}:</label>
         <textarea name="suggestedMeaning" id="suggestedMeaning" class="form-control" rows="3"></textarea>
     </div><br>
 
     <div class="form-group">
-        <h5>{{message "lang.submitname.enterlocation"}}: (optional)</h5>
+        <label class="optional">{{message "lang.submitname.enterlocation"}}:</label>
         <select name="suggestedGeoLocation" id="suggestedGeoLocation" class="form-control">
             {{#each geoLocations}}
                 <option>{{this.place}}</option>
@@ -19,14 +22,14 @@
     </div><br>
 
     <!--Uncomment when TTS is implemented<div class="form-group">-->
-    <!--<h5>Please help us pronounce the new name:(optional)</h5>-->
+    <!--<label class="optonal">Please help us pronounce the new name:</label>-->
     <!--<input type="file" id="pronunciation">-->
     <!--</div>-->
 
     <div class="form-group">
-        <h5>{{message "lang.submitname.enteremail"}}: (required)</h5>
+        <label class="required">{{message "lang.submitname.enteremail"}}:</label>
         <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email">
     </div>
 
-    <button type="submit" id="submit-name" class="btn btn-info btn-lg">Submit new name</button>
+    <button type="submit" id="submit-name" class="btn btn-success">Submit new name</button>
 </form>
