more updates to templates

--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="dropdown-menu dropdown-menu-right">
                 <li><a ui-sref="auth.profile.index">Yemi Agbetunsin</a></li>
-                <li><a ui-sref="login">Log Out</a></li>
+                <li><a ng-click="logout()">Log Out</a></li>
             </ul>
         </div>
         <div class="search_section hidden-sm hidden-xs" ng-controller="topSearchCtrl">
