extended with more functionality

--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
@@ -8,7 +8,7 @@
         <div class="header_user_actions dropdown" on-toggle="toggled(open)" dropdown>
             <div class="dropdown-toggle user_dropdown" dropdown-toggle>
                 <div class="user_avatar">
-                    <img src="http://placehold.it/40x40" alt="" ng-title="{{user.username}} ({{user.email}})" width="38" height="38">
+                    <img src="http://placehold.it/40x40" ng-src="{{user.photo}}" alt="" ng-title="{{user.username}} ({{user.email}})" width="38" height="38">
                 </div>
                 <span class="caret"></span>
             </div>
