--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -18,6 +18,8 @@
 
 <section>
    <div class="container">
+
+       <div class="row">
        
        <div class="col-sm-3">
        	  
@@ -80,7 +82,9 @@
 		<a class="btn btn-lg btn-success">Volunteer</a>
 
        </div>
+     </div>
    </div>
+   
 </section>
 
 <!-- /main-content -->
