--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -20,7 +20,6 @@
 
 <title>{{ title }}</title>
 
-
 </head>
 
 <body>
@@ -50,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <div class="nav-brand"><a href="/"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></div>
+                    <div class="nav-brand"><a href="/"><img src="/assets/img/yd-logo-brown-black.png"  alt="YorubaName.com" title="YorubaName.com" /></a></div>
                 </div>
                  
                 <!--a class="btn btn-sm btn-primary navbar-right" href="https://indeigogo.com/">Donate</a-->                          
@@ -58,8 +57,8 @@
                     <ul class="nav navbar-nav navbar-right">   
                         <!--li><a href="/">{{message "lang.home"}}</a></li-->
                         <li><a href="/about-us">{{message "lang.about"}}</a></li>
+                        <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
                         <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story">{{message "lang.donate"}}</a></li>
-                        <li><a href="http://blog.yorubaname.com/?page_id=1972">{{message "lang.volunteer"}}</a></li>
                         <li><a href="http://blog.yorubaname.com">{{message "lang.blog"}}</a></li>
                         <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
