--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -9,7 +9,7 @@
             {{> searchcomponent }}
             
             <h3>{{message "lang.jumboh31"}}</h3>
-            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a>
+            <a href="/submitname" class="btn btn-lg btn-success">{{message "lang.jumboh32"}}</a>
        </div>
     </div>
 </section>
@@ -82,17 +82,16 @@
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2 col-sm-offset-3"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/goethe_institut.png"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/alti.jpg"></div>
             </div>
 
             <div class="row" style="margin-top:40px">
                 <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-4">
+                    <div class="fb-page" data-href="https://www.facebook.com/YorubaNames" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/YorubaNames"><a href="https://www.facebook.com/YorubaNames">Yoruba Names Dictionary</a></blockquote></div></div>
+                </div>
                 <div class="col-sm-4">
                     <form method="post" class="subscribe">
                         <h4>YorubaName Newsletter</h4>
