--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/partials/header.html
@@ -1,5 +1,5 @@
 <!-- header -->
-<header id="main_header" class="{{topBarColor}}">
+<header id="main_header" class="{{topBarColor}}" ng-controller="headerCtrl">
 	<div class="container-fluid">
 		<div class="brand_section">
 			<a ui-sref="auth.home"><img src="http://blog.yorubaname.com/wp-content/uploads/2015/04/yd-logo-brown-black.png" alt="Yoruba Names" width="63" height="26"></a>
