--- a/website/src/main/resources/website/submitnameform.hbs
+++ b/website/src/main/resources/website/submitnameform.hbs
@@ -28,7 +28,7 @@
 
     <div class="form-group">
         <label class="required">{{message "lang.submitname.enteremail"}}:</label>
-        <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email">
+        <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email" required>
     </div>
 
     <button type="submit" id="submit-name" class="btn btn-success">Submit new name</button>
