--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/partials/_form.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/partials/_form.html
@@ -69,14 +69,6 @@
             <textarea id="person_name" class="form-control" ng-model="name.famousPeople"></textarea>
         </div>
 
-
-        
-
-        <!--div class="form-group">
-            <label>Submitted By</label>
-            <input type="email" class="form-control" name="submittedBy" ng-model="name.submittedBy">
-        </div-->
-
     </div>
     
 </div>
@@ -84,8 +76,7 @@
 <div class="row">
     <div class="col-sm-12">
         <hr>
-        <button  ng-show="new" type="submit" class="btn btn-lg btn-success" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty">Submit for Review</button>
-        <button  ng-hide="new" type="submit" class="btn btn-lg btn-success" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty">Modify Entry</button>
+        <button type="submit" class="btn btn-lg btn-success" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty">{{ new ? 'Submit for Review' : 'Modify Entry' }}</button>
         <a ng-click="delete()" class="btn btn-link btn-lg" ng-hide="new || !isAdmin">Delete {{name.name}}</a>
     </div>
 </div>
